# internal/handlers/delete.go
@@ -5,7 +5,7 @@ import (
 
 	"github.com/google/uuid"
 	"github.com/helf4ch/gocrudl/internal/application"
-	"github.com/helf4ch/gocrudl/internal/dto"
+	"github.com/jackc/pgx/v5"
 )
 
 // Delete godoc
@@ -13,8 +13,9 @@ import (
 // @Description Удалить подписку по id
 // @Produce json
 // @Param id path uuid.UUID true "id подписки"
-// @Success 200 {object} application.AppResponse{body=dto.DeleteSubscriptionResponse}
+// @Success 204 {object} application.AppResponse{}
 // @Failure 400 {object} application.AppResponse{error=string}
+// @Failure 404 {object} application.AppResponse{error=string}
 // @Failure 500 {object} application.AppResponse{error=string}
 // @Router /subs/{id} [delete]
 func Delete(
@@ -33,16 +34,19 @@ func Delete(
 		}
 	}
 
-	count, err := app.Store.DeleteSubscription(r.Context(), app.Store.Pool, id)
+	_, err = app.Store.DeleteSubscription(r.Context(), app.Store.Pool, id)
 	if err != nil {
+		if err == pgx.ErrNoRows {
+			return &application.AppError{
+				Code:    http.StatusNotFound,
+				Message: "no such record",
+				Err:     err,
+			}
+		}
 		return err
 	}
 
-	out := dto.DeleteSubscriptionResponse{
-		Count: int(count),
-	}
-
-	err = app.ResponseOk(w, out)
+	err = app.Response(w, true, http.StatusNoContent, "", nil)
 	if err != nil {
 		return err
 	}
